[package]
name = "ktest-parser"
version = "0.1.0"
authors = ["Mark Hakansson <mark.hakansson@live.se>"]
edition = "2018"
description = "Parse KTest binaries (.ktest)"
categories = ["parser-implementations"]
keywords = ["klee", "ktest"]
readme = "README.md"
repository = "https://github.com/markhakansson/ktest-parser"
license = "BSD-3-Clause"

[dependencies]
nom = "6.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
